--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,16 @@
+2007-11-14  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/check_native.c (__check_native): Simplify
+	significantly.  The device type is also part of the ifinfomsg data.
+
+	* po/sv.po: Update from translation team.
+	* po/nl.po: Likewise.
+
+	* nscd/cache.c (prune_cache): If cache is empty, instruct caller
+	to wake up in 24 hours.
+
+	* nscd/gai.c (__ioctl): Define.  Include check_native.c.
+
 2007-11-13  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/cs.po: Update from translation team.
