--- a/fsf/trunk/libc/ChangeLog
+++ b/fsf/trunk/libc/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-15  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/ieee754/dbl-64/sincos.tbl: Fix size of union.
+	Reported by Christoph Quirin Lauter <christoph.lauter@ens-lyon.fr>.
+
+2007-11-15  Ulrich Drepper  <drepper@redhat.com>
+
+	* po/ko.po: Update from translation team.
+
 2007-11-14  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/check_native.c (__check_native): Simplify
