--- a/fsf/trunk/libc/nptl/ChangeLog
+++ b/fsf/trunk/libc/nptl/ChangeLog
@@ -1,3 +1,12 @@
+2007-12-12  Ulrich Drepper  <drepper@redhat.com>
+
+	* tst-basic7.c: Allocate memory for the stack.
+
+	[BZ #5465]
+	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S [!SHARED]
+	(__pthread_cond_timedwait): Don't use VDSO.
+	Patch by Michal Januszewski.
+
 2007-12-07  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #5455]
